# dde-permission-manager

./: .gitignore  CMakeLists.txt
.reuse/: dep5
DBus/: org.desktopspec.permission.client.xml  org.desktopspec.permission.xml
dbus/: org.desktopspec.permission.client.xml  org.desktopspec.permission.xml
dbus/types/: permissions_info.cpp  permissions_info.h
debian/: changelog  control  copyright  deepin-permission-service.postinst
files/dbus/: CMakeLists.txt  org.desktopspec.permission.service
files/systemd/: CMakeLists.txt  org.desktopspec.permission.service
misc/: CMakeLists.txt
misc/dconf/: CMakeLists.txt  org.desktopspec.permission.dconfig.json
misc/polkit-action/: CMakeLists.txt  org.desktopspec.permission.modify-app-permissions.policy
src/: CMakeLists.txt  main.cpp  permissionoption.cpp  permissionoption.h  permissionpolicy.cpp  permissionpolicy.h  settings.cpp  settings.h
src/impl/: permission_client.cpp  permission_client.h  permission_service.cpp  permission_service.h
src/settings/: settings.cpp  settings.h
src/utils/: common.cpp  common.h  dconfig_settings.cpp  dconfig_settings.h  phase_pm_dconfig.cpp  phase_pm_dconfig.h
src/widgets/: clientdialog.cpp  clientdialog.h
tests/testgroup/: test.json
toolGenerate/dconfig2cpp/: org_deepin_dde_permission_dconfig1.hpp
toolGenerate/qdbusxml2cpp/: org.deepin.dde.Permission1.ClientAdaptor.cpp  org.deepin.dde.Permission1.ClientAdaptor.h  org.deepin.dde.Permission1Adaptor.cpp  org.deepin.dde.Permission1Adaptor.h
translations/: dde-permission-manager_zh_CN.qm  dde-permission-manager_zh_CN.ts
